--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,4 +1,5 @@
 idf_component_register(SRCS "main.c"
                     PRIV_REQUIRES spi_flash
-                    INCLUDE_DIRS ""
-                    REQUIRES esp_wifi)
+                    REQUIRES esp_wifi
+                    REQUIRES wifiStation
+                    REQUIRES nvs_flash)
