Added tcp server component

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -2,4 +2,5 @@ idf_component_register(SRCS "main.c"
                     PRIV_REQUIRES spi_flash
                     REQUIRES esp_wifi
                     REQUIRES wifiStation
-                    REQUIRES nvs_flash)
+                    REQUIRES nvs_flash
+                    REQUIRES tcp_socket_server)
