Added working tcp server

--- a/components/tcp_socket_server/CMakeLists.txt
+++ b/components/tcp_socket_server/CMakeLists.txt
@@ -1,2 +1,4 @@
-idf_component_register(SRCS
-                    INCLUDE_DIRS "include")
+idf_component_register(SRCS "tcp_socket_server.c"
+                    INCLUDE_DIRS "include"
+                    REQUIRES esp_event
+                    REQUIRES esp_netif)
