Added LED switch event handler

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -3,4 +3,5 @@ idf_component_register(SRCS "main.c"
                     REQUIRES esp_wifi
                     REQUIRES wifiStation
                     REQUIRES nvs_flash
-                    REQUIRES tcp_socket_server)
+                    REQUIRES tcp_socket_server
+                    REQUIRES LED_switch_events)
