--- a/components/tcp_socket_server/CMakeLists.txt
+++ b/components/tcp_socket_server/CMakeLists.txt
@@ -1,4 +1,5 @@
 idf_component_register(SRCS "tcp_socket_server.c"
                     INCLUDE_DIRS "include"
                     REQUIRES esp_event
-                    REQUIRES esp_netif)
+                    REQUIRES esp_netif
+                    REQUIRES LED_switch_events)
